manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: troubleshooting
  namespace: 82227493
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: troubleshooting
