manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: troubleshooting-ingress
  namespace: 82227493
spec:
  ingressClassName: ingress-internal
  rules:
  - host: tr-82227493.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: troubleshooting
            port:
              number: 8080
